nop-k8s/nopdb.yaml
---
apiVersion: v1 
kind: Pod
metadata:
  name: nopdb
  labels:
    app: mysql 
spec:
  containers:
    - name: nopdb
      image: mysql:8
      ports:
        - name: nopdbport
          containerPort: 3306
          protocol: TCP
