nop-k8s/nop-svc.yaml
---
apiVersion: v1 
kind: Service
metadata:
  name: nop-svc 
  labels:
    app: nop-svc 
spec:
  type: LoadBalancer
  selector:
    app: nop 
  ports:
    - port: 5000
      targetPort: 32000
      protocol: TCP
