nop-k8s/nop.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecomm-ingress
  annotations:
    
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /nopcommerce(/|$)(.*)
            pathType: Exact
            backend:
              service:
                name: nop-svc
                port:
                  number: 5000
